--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TY-gregory/lifestyle.git"
+    "url": "git+https://github.com/TY-gregory/js-advance-project--2.0.git"
   },
   "bugs": {
-    "url": "https://github.com/TY-gregory/lifestyle/issues"
+    "url": "https://github.com/TY-gregory/js-advance-project--2.0/issues"
   },
-  "homepage": "https://github.com/TY-gregory/lifestyle#readme"
+  "homepage": "https://github.com/TY-gregory/js-advance-project--2.0#readme"
 }
